--- a/public/css/login_register.css
+++ b/public/css/login_register.css
@@ -43,8 +43,8 @@ position: relative;
   float: left;
   width: 640px;
   height: 280px;
-overflow: hidden;
-  background-color: #fff;
+  overflow: hidden;
+  background-color: #000;
   margin-top: 100px;
 box-shadow: 1px 10px 30px -10px rgba(0,0,0,0.5);
 }
@@ -56,7 +56,7 @@ box-shadow: 1px 10px 30px -10px rgba(0,0,0,0.5);
 left: 0px;
   width: 320px;
   height: 280px;
-  background-color: #eee;
+  background-color: #000;
 -webkit-transition: all 0.5s;
 -moz-transition: all 0.5s;
 -ms-transition: all 0.5s;
@@ -101,7 +101,6 @@ top:-80px;
  -webkit-filter: grayscale(100%);     filter: grayscale(100%);
 opacity: 0.2;
 animation-name: animar_fondo;
-  animation-duration: 20s;
 animation-timing-function: linear;
 animation-iteration-count: infinite;
 animation-direction: alternate;
@@ -119,7 +118,6 @@ top:-80px;
   width: 100%;
 opacity: 0.3;
 animation-name: animar_fondo;
-animation-duration: 20s;
 animation-timing-function: linear;
 animation-iteration-count: infinite;
 animation-direction: alternate;
@@ -348,5 +346,5 @@ font-weight: 400;
     position: relative;
     float: left;
     margin: 10px;
-margin-left: 30px;
+margin-left: 7px;
 }
