--- a/public/css/3d_css_js/css/style.css
+++ b/public/css/3d_css_js/css/style.css
@@ -120,6 +120,7 @@ button:focus {
 	margin: 0.5em;
 	padding: 0em 0;
 	text-decoration: none;
+	color: #000;
 }
 
 .codrops-icon span {
@@ -154,6 +155,7 @@ button:focus {
 	overflow: hidden;
 	width: calc(100vw - 300px);
 	height: 100vh;
+    background: #166ba2;
 }
 
 .mall {
@@ -254,7 +256,7 @@ button:focus {
 
 .level:hover::after,
 .level--current::after {
-	color: #515158;
+	color: #fff;
 }
 
 .level--current::after {
@@ -264,18 +266,22 @@ button:focus {
 
 .level--1::after {
 	content: 'L1';
+	color: #000;
 }
 
 .level--2::after {
 	content: 'L2';
+	color: #000;
 }
 
 .level--3::after {
 	content: 'L3';
+	color: #000;
 }
 
 .level--4::after {
 	content: 'L4';
+	color: #000;
 }
 
 .level:not(:first-child) {
