--- a/public/css/welcome_css/welcome.css
+++ b/public/css/welcome_css/welcome.css
@@ -25,7 +25,12 @@ section.gallery {
 }
 section.testimonials { 
   background-color: #2980b9;
-   }
+}
 section.contact { 
-  background-color: #9b59b6; 
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    display: table;
+    background-attachment: fixed;
+    background-image: url(parallax_image/wp0.jpg); 
 }
