--- a/public/css/welcome_css/welcome.css
+++ b/public/css/welcome_css/welcome.css
@@ -3,13 +3,13 @@ section {
     padding: 30% 0;
     text-align: center;
 }
-section.map { 
+.map { 
   height: 100vh;
   width: 100%;
   background-size: cover;
   display: table;
   background-attachment: fixed;
-  background-image: url(parallax_image/wp5.jpg);
+  background: #5f0b1c;
 }
 section.team { 
   height: 100vh;
@@ -17,14 +17,17 @@ section.team {
   background-size: cover;
   display: table;
   background-attachment: fixed;
-  background-color: #e67e22;
   background-image: url(parallax_image/wp4.jpg); 
 }
 section.gallery { 
   background-image: url(parallax_image/wp3.jpg);
 }
-section.testimonials { 
-  background-color: #2980b9;
+section.about { 
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  display: table;
+  background-attachment: fixed;
 }
 section.contact { 
     height: 100vh;
