--- a/public/css/welcome_css/welcome_contact.css
+++ b/public/css/welcome_css/welcome_contact.css
@@ -1,76 +1,76 @@
 /*@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 */
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+.input-contact::-webkit-.input-contact-placeholder, textarea::-webkit-.input-contact-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
 
-input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+.input-contact:focus::-webkit-.input-contact-placeholder, textarea:focus::-webkit-.input-contact-placeholder {
   color: #bbb5af;
 }
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+.input-contact::-moz-placeholder, textarea::-moz-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
 
-input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+.input-contact:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
   color: #bbb5af;
 }
 
-input::placeholder, textarea::placeholder {
+.input-contact::placeholder, textarea::placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
 
-input:focus::placeholder, textarea::focus:placeholder {
+.input-contact:focus::placeholder, textarea::focus:placeholder {
   color: #bbb5af;
 }
 
-input::-ms-placeholder, textarea::-ms-placeholder {
+.input-contact::-ms-placeholder, textarea::-ms-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
 
-input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+.input-contact:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
   color: #bbb5af;
 }
 
 /* on hover placeholder */
 
-input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+.input-contact:hover::-webkit-.input-contact-placeholder, textarea:hover::-webkit-.input-contact-placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
 
-input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+.input-contact:hover:focus::-webkit-.input-contact-placeholder, textarea:hover:focus::-webkit-.input-contact-placeholder {
   color: #cbc6c1;
 }
 
-input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+.input-contact:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
 
-input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+.input-contact:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
   color: #cbc6c1;
 }
 
-input:hover::placeholder, textarea:hover::placeholder {
+.input-contact:hover::placeholder, textarea:hover::placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
 
-input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+.input-contact:hover:focus::placeholder, textarea:hover:focus::placeholder {
   color: #cbc6c1;
 }
 
-input:hover::placeholder, textarea:hover::placeholder {
+.input-contact:hover::placeholder, textarea:hover::placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
 
-input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
+.input-contact:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
   color: #cbc6c1;
 }
 
@@ -80,7 +80,7 @@ input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
   margin: 50px auto 100px auto;
 }*/
 
-input {
+.input-contact {
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   width: 470px;
@@ -100,7 +100,7 @@ input {
   -ms-transition: all 0.3s ease-in-out;
 }
 
-input:hover {
+.input-contact:hover {
   background: #b3aca7;
   color: #e2dedb;
 }
