Google map | Menu button

--- a/public/css/3d_css_js/css/style.css
+++ b/public/css/3d_css_js/css/style.css
@@ -120,7 +120,7 @@ button:focus {
 	margin: 0.5em;
 	padding: 0em 0;
 	text-decoration: none;
-	color: #000;
+	color: #fff;
 }
 
 .codrops-icon span {
