--- a/public/css/welcome_css/welcome.css
+++ b/public/css/welcome_css/welcome.css
@@ -3,7 +3,7 @@ section {
     padding: 30% 0;
     text-align: center;
 }
-.map { 
+.mapa { 
   height: 100vh;
   width: 100%;
   background-size: cover;
