--- a/public/css/welcome_css/welcome_bundle_css_js/css/borderNav.css
+++ b/public/css/welcome_css/welcome_bundle_css_js/css/borderNav.css
@@ -200,10 +200,10 @@
 .bt-menu ul li a {
     display: block;
     outline: none;
-    color: transparent;
     text-align: center;
     text-decoration: none;
     font-size: 0px;
+    color: #fff;
 }
 
 .bt-menu ul li a:before {
