Modify and added pricing

--- a/public/css/welcome_css/welcome_bundle_css_js/css/demo.css
+++ b/public/css/welcome_css/welcome_bundle_css_js/css/demo.css
@@ -41,7 +41,7 @@ a:focus {
 
 .view {
 	position: relative;
-	display: flex;
+	/*display: flex;*/
 	justify-content: flex-end;
 	overflow: hidden;
 	height: 100vh;
