--- a/public/css/welcome_css/welcome_menu.css
+++ b/public/css/welcome_css/welcome_menu.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  position: relative
+  /*position: relative*/
 }
 .csstransforms .cn-wrapper {
   font-size: 1em;
